# smart-rag-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_zh.md  config.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: architecture.md
eval/: dataset.json  run_eval.py
examples/: quickstart.py
src/smart_rag/: __init__.py  agent.py  cli.py  config.py  crawler.py  embedding.py  graph.py  indexer.py  llm.py  planner.py  retriever.py
